--- a/src/components/ProjectSection/ProjectSection.css
+++ b/src/components/ProjectSection/ProjectSection.css
@@ -41,6 +41,6 @@
   }
 
   .projects-container {
-    gap: 1rem;
+    gap: 2rem;
   }
 }
